# z-agent

./: .env.example  .gitignore  main.py  pyproject.toml  readme.md  requirements.txt
agent/: approval.py  graph.py  orchestrator.py  plan_executor.py  plan_schema.py  planner.py  roles.py  router.py  tools.py  verifier.py  vision.py
agent/prompts/: agent.md  base.md
api/: approval.py  chat.py  knowledge.py  state.py  user.py
config/: mcp_config.yaml  mcp_config_empty.yaml  settings.py
core/: approval_store.py  container.py  knowledge_service.py  metrics.py  rag_service.py  session_service.py  session_store.py
evaluation/: __init__.py  rag_evaluator.py  ragas_evaluator.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  (+1 more)
mcp_client/: __init__.py  manager.py  registry.py  schema.py
memory/: conversation.py  long_term.py  query_rewriter.py  token_budget.py  user_profile.py
retrieval/: __init__.py  bm25.py  chunker.py  cleaners.py  deduplicator.py  document_parser.py  embedding.py  hierarchical_retriever.py  ingestion_pipeline.py  parent_store.py  reranker.py  vector.py
scripts/: evaluate_ragas.py  import_knowledge.py  test_mcp_connect.py
skill/: __init__.py  buffer.py  index_formatter.py  parser.py  registry.py  schema.py  state_store.py  tool.py
tests/: conftest.py  test_agent_graph.py  test_api.py  test_approval.py  test_config.py  test_mcp_client.py  test_memory.py  test_orchestrator.py  test_plan_schema.py  test_planner.py  test_retrieval.py  test_session.py  test_token_budget.py  test_vision.py
(+14 files in other folders)
